<resources>
    <string name="app_name">MEAValia</string>
    <string name="criteria_name_hint">Name</string>
    <string name="criteria_sentence_hint">Sentence</string>
    <string name="criteria_email_hint">E-mail</string>
    <string name="criteria_cpf_hint">CPF</string>
    <string name="criteria_cnpj_hint">CNPJ</string>
    <string name="criteria_save_button_label">Save</string>
    <string name="criteria_clear_button_label">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="list_of_criteria">List of criteria</string>
    <string name="insert_criteria">Insert criteria</string>
    <string name="edit_criteria">Edit criteria</string>
    <string name="about">About the app</string>

    <string name="student_name_label">Student name: </string>
    <string name="student_email_label">Student e-mail: </string>
    <string name="app_description_label">APP description: </string>
    <string name="instution_name_label">Institution name: </string>

    <string name="student_name_value">Emanuel Victor de Oliveira Fonseca</string>
    <string name="student_email_value">emanuel.info@gmail.com</string>
    <string name="app_description_value">This application create assessments and allow it to be executed by users.</string>
    <string name="instution_name_value">Universidade Tecnológica Federal do Paraná</string>

    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="execute">Execute</string>

    <string name="menu_settings">Settings</string>

    <string name="assessment_sentence">Assessment sentence</string>
    <string name="thanks_sentence">Thanks for your assessment!</string>
    <string name="password_logout_label">Insert the password to logout</string>

    <string name="terrible">Terrible</string>
    <string name="bad">Bad</string>
    <string name="regular">Regular</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>

    <string name="fab_content_description">Add Critery</string>
    <string name="check_box_person_label">The criteria is a person?</string>
    <string name="physic_person">Physic Person</string>
    <string name="legal_person">Legal Person</string>

    <string name="HIGH_PRIORITY_NAME">HIGH_PRIORITY</string>
    <string name="MEDIUM_PRIORITY_NAME">MEDIUM_PRIORITY</string>
    <string name="LOW_PRIORITY_NAME">LOW_PRIORITY</string>
    <string name="HIGH_PRIORITY_DESCRIPTION">HIGH PRIORITY</string>
    <string name="MEDIUM_PRIORITY_DESCRIPTION">MEDIUM PRIORITY</string>
    <string name="LOW_PRIORITY_DESCRIPTION">LOW PRIORITY</string>

    <string name="fields_cleared">Fields cleared!</string>
    <string name="invalid_fields">Invalid fields!</string>
    <string name="criteria_inserted">Criteria inserted!</string>
    <string name="criteria_updated">Criteria updated!</string>
    <string name="criteria_removed">Criteria removed!</string>
    <string name="criteria">Criteria</string>
    <string name="selected">selected</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_message">Are you sure you want to do this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="criteria_edit_button_label">Edit</string>
    <string name="this_field_is_required">This field is required</string>
</resources>